fixed z-index on banner, graph and text

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -57,6 +57,7 @@ h1{
 
 .title-text{
     pointer-events: none;
+    z-index: 999;
 }
 
 .title-text h1 {
@@ -71,11 +72,11 @@ h1{
     left: -5%;
     height: 500px !important;
     width: 105% !important; /*работает - НЕ ЛАПАЙ И МОЛИСЬ НА ЭТО!*/
-    z-index: 2;
+   /* z-index: 2;*/
     pointer-events: none;
 }
 .ellipse-main{
-    z-index: 999;
+    z-index: 2;
 }
 
 
@@ -83,7 +84,7 @@ h1{
 .invest-packages{
     margin-top: 230px;
     padding-bottom: 30px;
-    z-index: 1000;
+    /*z-index: 1000;*/
 }
 
 .card{
@@ -282,3 +283,10 @@ table{
     width: 110px;
 }
 
+.chart-container {
+    position: relative;
+    margin: auto;
+    height: 80vh;
+    width: 80vw;
+    overflow: hidden;
+}
